# image-viewer

./: .gitignore  CMakeLists.txt  ImageViewer  Makefile  load_img.c  main.c  smiley.ppm  test  test.ppm
.cache/clangd/index/: main.c.6641BD4CFA436789.idx
img/: xmas.ppm
include/: file_utils.h  image.h  ppm.h  window.h
src/: file_utils.c  main.c  ppm.c  window.c
